# 02712_group_project

./: .gitignore  README.md  graphvelo_scv-test_for_mack_evaluation.ipynb  paths.py  pyproject.toml  test_graphvelo_scv.ipynb  test_graphvelo_scv_with_evaluation.ipynb  test_luci_comparison.py  test_luci_part.ipynb  tutorial_for_scvelo.ipynb
.virtual_documents/: graphvelo_scv-test_for_mack_evaluation.ipynb  original_graphvelo_scv.ipynb  test_graphvelo_scv-Copy1.ipynb  test_graphvelo_scv.ipynb  test_graphvelo_scv_with_evaluation.ipynb
02712_group_project/: test_graphvelo_scv.ipynb
project/: __init__.py
project/graphvelo/: __init__.py  graph_velocity.py  metric.py  tangent_space.py  utils.py
project/plotting/: __init__.py  impl.py
project/preprocessing/: __init__.py  filter_norm.py  impl.py  moments.py  neighbors.py  pca.py
project/tools/: __init__.py  _dynamics_recovery.py  _em_model_utils.py  dynamical.py  impl.py  latent.py  utils.py  velocity_graph.py
